# buttonize

./: .Dockerignore  .gitignore  Cargo.toml  Dockerfile  Jenkinsfile  README.md
dagger/: pipeline.py
deploy/: deploy.tf
src/: main.rs
src/api/: default_routes.rs  device_routes.rs  mod.rs  router.rs
src/database/: mongo_database.rs
src/middleware/: cors.rs
src/models/: automation.rs  device.rs  event.rs  mod.rs
src/ui/: package-lock.json  package.json
src/ui/public/: index.html
src/ui/src/: App.js
src/ui/src/components/: DeviceCard.js  DeviceDialog.js  DeviceGrid.js  DrawMenu.js  Header.js  ThemeSwitcher.js
src/ui/src/pages/: AutomationPage.js  HomePage.js  SettingsPage.js
src/ui/src/services/: api.js
src/ui/src/utils/: util.js
src/web/: index.html
src/websocket/: websocket.rs
